fixed layout issue on hire page

--- a/components/hire/hire.scss
+++ b/components/hire/hire.scss
@@ -108,8 +108,8 @@ section > div {
   }
 
   .filters {
-    background-color: #f4f4f4;
-    padding: 1rem 4rem 3rem 4rem;
+    background-color: #ecebeb;
+    padding: 1em;
     margin: 24px 0 24px;
     width:66.66%;
     display: inline-block;
